add: mensagens de log e dtos